Skeleton of working js code.
TODO:
- hints
- count number of mistakes and lose if too many
- nicer alerts
- animation

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -19,25 +19,25 @@
         <div id="main">
             <div class="grid-container"></div>
             <!-- <div class="grid-container">
-                <div class="grid-item solved-row">
+                <div class="solved-row">
                     <div class="solved-heading">דורסי יום</div>
                     <div class="solved-items">נץ, נשר, בז, חתול</div>
                 </div>
-                <div class="grid-item solved-row">
+                <div class="solved-row">
                     <div class="solved-heading">דורסי יום</div>
                     <div class="solved-items">נץ, נשר, בז, חתול</div>
                 </div>
-                <div class="grid-item solved-row">
+                <div class="solved-row">
                     <div class="solved-heading">דורסי יום</div>
                     <div class="solved-items">נץ, נשר, בז, חתול</div>
                 </div>
-                <div class="grid-item solved-row">
+                <div class="solved-row">
                     <div class="solved-heading">דורסי יום</div>
                     <div class="solved-items">נץ, נשר, בז, חתול</div>
                 </div>
             </div> -->
             <div class="buttons-container">
-                <div class="button" id="check-button">בדיקה</div>
+                <div class="button" id="submit-button">אישור</div>
                 <div class="button" id="hint-button">רמז</div>
             </div>
         </div>
