Added beginning+opening dialogue
Co-Authored-By: Zvika Ben-Haim <zvikabh@users.noreply.github.com>

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -11,17 +11,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="connections.js"></script>
 <body>
-    <!--TODO:
-        Add a dialogue div that can be used for "welcome", "well done", etc.
-        I'm not sure how to do it and I want to make the mistake counter.
-    -->
-    <!-- <div class="dialogue" id="big-dialogue">
-        <div id="big-dialogue-background"></div>
-        <div id="big-dialogue-main">
-            <div id="big-dialogue-title">ברוכים הבאים!</div>
-            <div id="big-dialogue-text">הרבה הרבה טקסט ואוו כל כך הרבה טקסט עוד ועוד ועוד ועוד ועוד טקסט אהההה טקסטטט ואוו טקסט</div>
+    <div class="dialogue" id="instructions">
+        <div class="dialogue-frame">
+            <div class="dialogue-content">
+                <div class="dialogue-title"></div>
+                <div class="dialogue-text"></div>
+                <div id="start-button"></div>
+            </div>
         </div>
-    </div> --> 
+    </div>
     <div id="all">
         <div class="logo-bar">
             קשר מרובע
