Some passive-aggressive feedback

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -11,12 +11,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="connections.js"></script>
 <body>
-    <div class="dialogue" id="instructions">
-        <div class="dialogue-frame">
-            <div class="dialogue-content">
-                <div class="dialogue-title"></div>
-                <div class="dialogue-text"></div>
-                <div id="start-button"></div>
+    <div class="dialog" id="instructions">
+        <div class="dialog-frame">
+            <div class="dialog-content">
+                <div class="dialog-title">קשר מרובע</div>
+                <div class="dialog-text">הוראות שנעמה הולכת לכתוב. נכון נעמה?</div>
+                <div id="start-button">זהו כפתור שצריך שיפוץ ל-CSS שלו</div>
             </div>
         </div>
     </div>
@@ -27,26 +27,8 @@
         <div class="filler"></div>
         <div id="main">
             <div class="grid-container"></div>
-            <!-- <div class="grid-container">
-                <div class="solved-row">
-                    <div class="solved-heading">דורסי יום</div>
-                    <div class="solved-items">נץ, נשר, בז, חתול</div>
-                </div>
-                <div class="solved-row">
-                    <div class="solved-heading">דורסי יום</div>
-                    <div class="solved-items">נץ, נשר, בז, חתול</div>
-                </div>
-                <div class="solved-row">
-                    <div class="solved-heading">דורסי יום</div>
-                    <div class="solved-items">נץ, נשר, בז, חתול</div>
-                </div>
-                <div class="solved-row">
-                    <div class="solved-heading">דורסי יום</div>
-                    <div class="solved-items">נץ, נשר, בז, חתול</div>
-                </div>
-            </div> -->
             <div class="mistake-container">
-                <div id="mistake-text">נסיונות שנשארו:</div>
+                <div id="mistake-text">ניחושים נותרים:</div>
                 <div id="mistake-counter">
                     <div class="mistake-circle" id="mt1"></div>
                     <div class="mistake-circle" id="mt2"></div>
