Win and lose dialog boxes

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -30,10 +30,10 @@
             <div class="mistake-container">
                 <div id="mistake-text">ניחושים נותרים:</div>
                 <div id="mistake-counter">
-                    <div class="mistake-circle" id="mt1"></div>
-                    <div class="mistake-circle" id="mt2"></div>
-                    <div class="mistake-circle" id="mt3"></div>
-                    <div class="mistake-circle" id="mt4"></div>
+                    <div class="mistake-circle"></div>
+                    <div class="mistake-circle"></div>
+                    <div class="mistake-circle"></div>
+                    <div class="mistake-circle"></div>
                 </div>
             </div>
             <div class="buttons-container">
