Better alignment of items on the page

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -28,12 +28,15 @@
         </div>
     </div>
     <div id="all">
-        <div class="logo-bar">
-            קשר מרובע
+        <div id="top">
+            <div class="logo-bar">
+                קשר מרובע
+            </div>
         </div>
-        <div class="filler"></div>
         <div id="main">
             <div class="grid-container"></div>
+        </div>
+        <div id="bottom">
             <div class="mistake-container">
                 <div id="mistake-text">ניחושים נותרים:</div>
                 <div id="mistake-counter">
@@ -69,7 +72,6 @@
                 </div>
             </div>
         </div>
-        <div class="filler"></div>
     </div>
     <div class="alert" id="alert" style="opacity: 0; display: none;">
         <div class="alert-content">
