Animate disappearing circles on incorrect guess

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -62,7 +62,7 @@
                 </button>
                 <div class="reveal-answers-mode" id="reveal-next-button-wrapper">
                     <button id="reveal-next-button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                        הרביעיה הבאה >>
+                        הצג >>
                     </button>
                 </div>
                 <div id="show-lose-dialog-button-wrapper" style="display: none;">
