Added instructions + tie picture

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -18,7 +18,26 @@
         <div class="dialog-frame">
             <div class="dialog-content">
                 <div class="dialog-title">קשר מרובע</div>
-                <div class="dialog-text">הוראות שנעמה הולכת לכתוב. נכון נעמה?</div>
+                <div class="dialog-text">
+                    קשר מרובע יחליף את מילותיים כל שבת.
+                </div>
+                <div class="dialog-text">
+                    עליכם לחלק את המילים שלפניכם לארבע רביעיות, כך שבין כל המילים ברביעייה מסוימת יש קשר.
+                </div>
+                <div class="dialog-text">
+                    <ul>
+                        <li>
+                            לחצו על ארבע מילים קשורות ואז על "אוקיי" כדי לסמן רביעייה.
+                        </li>
+                        <li>
+                            לחצו על שתי מילים ואז על "רמז" כדי לבדוק אם הן באותה רביעייה.
+                            <br> שימו לב: מספר הרמזים מוגבל!
+                        </li>
+                    </ul>
+                </div>
+                <div class="dialog-text">
+                    לכל משחק פתרון יחיד. היזהרו ממילים שעשויות להתאים למספר רביעיות!
+                </div>
                 <div class="dialog-buttons">
                     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                         בואו נתחיל!
@@ -52,13 +71,13 @@
             </div>
             <div class="buttons-container">
                 <button id="submit-button" class="play-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    אישור
+                    אוקיי
                 </button>
                 <button id="hint-button" class="play-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                     רמז
                 </button>
                 <button id="deselect-button" class="play-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    ביטול
+                    הוראות
                 </button>
                 <div class="reveal-answers-mode" id="reveal-next-button-wrapper">
                     <button id="reveal-next-button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
