--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -17,7 +17,7 @@
     <div class="dialog" id="instructions">
         <div class="dialog-frame">
             <div class="dialog-content">
-                <div class="dialog-title">קשר מרובע</div>
+                <div class="dialog-title">קשר<img src="tie-blue.png" class="logo-image">מרובע</div>
                 <div class="dialog-text">
                     קשר מרובע יחליף את מילותיים כל שבת.
                 </div>
@@ -49,7 +49,7 @@
     <div id="all">
         <div id="top">
             <div class="logo-bar">
-                קשר מרובע
+                קשר<img src="tie-white.png" class="logo-image">מרובע
             </div>
         </div>
         <div id="main">
