minor bugfix in hints

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -76,7 +76,7 @@
                 <button id="hint-button" class="play-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                     רמז
                 </button>
-                <button id="deselect-button" class="play-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                <button id="instructions-button" class="play-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                     הוראות
                 </button>
                 <div class="reveal-answers-mode" id="reveal-next-button-wrapper">
